# FGSEditor

./: .gitignore  LICENSE  NOTICE.md  Netflix_FGS_dune2.txt  README.md  build.bat  dynamic_fgs_test.txt  pyproject.toml  static_fgs_test.txt
.github/workflows/: build.yml
FGS_grain_size/: 1.txt  11.txt  12.txt  13.txt  3.txt  4.txt  5.txt  6.txt  7.txt
FGS_size_table/: 0.txt  10.txt  2.txt  8.txt  9.txt
Templates/system/: default.txt
Templates/user/: .gitkeep
fgseditor_qt/: AFGS_TABLE_and_SEEDS.py  app_paths.py  dynamic_ui.py  event_editor_window.py  fgs_grain_sim.py  fgs_math.py  fgs_parser.py  fgs_save.py  fgs_size_table.py  fgs_templates.py  fgsview_loader.py  grain_preview.py  grav1synth.py  main_ui.py  params_sidebar.py  plotter.py  shortcuts.py  svt_photon_noise.py  time_utils.py  video_probe.py
fgseditor_qt/panels/: panel_fgs_value.py  panel_grain_size.py  panel_photon_noise.py  panel_templates.py  panel_time.py  tabs_widget.py  utils.py
