[project]
name = "FGSEditor"
version = "2.0.0"
description = "Film Grain Strength Editor"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "PySide6",
    "matplotlib",
    "numpy",
    "zstandard",
]

[project.scripts]
fgseditor = "fgseditor_qt.fgsview_loader:main"

[tool.setuptools]
packages = ["fgseditor_qt"]
