[project]
name = "FGSEditor"
version = "3.0.0"
description = "Film Grain Strength Editor"
requires-python = ">=3.12"
license = "AGPL-3.0"
dependencies = [
    "PySide6",
    "matplotlib",
    "numpy",
]

[project.scripts]
fgseditor = "fgseditor_qt.fgsview_loader:main"

[tool.setuptools]
packages = ["fgseditor_qt"]
